--- a/slides/common.tex
+++ b/slides/common.tex
@@ -82,7 +82,7 @@
   belowcaptionskip=\bigskipamount,
   captionpos=b,
   escapeinside={*'}{'*},
-  language=java,
+  % language=java,
   tabsize=2,
   emphstyle={\bf},
   commentstyle=\mdseries\it,
