--- a/slides/FP01-uder.tex
+++ b/slides/FP01-uder.tex
@@ -1305,18 +1305,21 @@ eval (Bin t op u) = do
   \item The Haskell home page: \url{http://www.haskell.org}
   \item Haskell libraries repository:
     \url{https://hackage.haskell.org/}
-  \item Haskell Tool Stack: \url{https://docs.haskellstack.org/en/stable/README/}
+  \item Haskell Tool Stack:
+    \url{https://docs.haskellstack.org/en/stable/README/}
+  \item The complete lecture materials
+    \url{https://github.com/proglang/FunctionalProgramming}
   \end{itemize}
 \end{frame}
 
 %----------------------------------------------------------------------
 
-\begin{frame}
-  % \frametitle{Questions?}
-  \begin{center}
-    \tikz{\node[scale=5] at (0,0){Thank you!};}
-  \end{center}
-\end{frame}
+% \begin{frame}
+%   % \frametitle{Questions?}
+%   \begin{center}
+%     \tikz{\node[scale=5] at (0,0){Thank you!};}
+%   \end{center}
+% \end{frame}
 
 
 
