more on composition

--- a/slides/09-test-data-generators.tex
+++ b/slides/09-test-data-generators.tex
@@ -15,7 +15,7 @@
 \end{frame}
 %----------------------------------------------------------------------
 \begin{frame}[fragile]
-  \frametitle{An application of type classes an monads}
+  \frametitle{An application of type classes and monads}
   \begin{block}<+->{Remember QuickCheck for testing}
     \begin{itemize}
     \item Automatic generation of test cases to test properties specified by the programmer
